[gd_scene load_steps=7 format=3 uid="uid://kc53kmnctf4c"]

[ext_resource type="Script" path="res://tutorial.gd" id="1_ph66d"]
[ext_resource type="Texture2D" uid="uid://c3517vg6s5p64" path="res://img/tutorial.jpeg" id="2_ergnj"]
[ext_resource type="FontFile" uid="uid://cys6dxq8vox8v" path="res://fonts/Prisma.ttf" id="3_pfg7a"]
[ext_resource type="PackedScene" uid="uid://hvfgktj3o36l" path="res://mp_3_loader.tscn" id="4_cs41w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rl4su"]
atlas = ExtResource("2_ergnj")
region = Rect2(0, 0, 1600, 900)

[sub_resource type="SpriteFrames" id="SpriteFrames_c8106"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl4su")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_ph66d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(960.5, 525)
scale = Vector2(1.20312, 1.22889)
sprite_frames = SubResource("SpriteFrames_c8106")

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_right = 1919.0
offset_bottom = 1077.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_pfg7a")
theme_override_font_sizes/font_size = 700
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioLoader" parent="." instance=ExtResource("4_cs41w")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioLoader" to="." method="_on_mp_3_loader_finished"]
